--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -58,7 +58,6 @@ const sectionSpacingClass =
 
 <style is:global>
   body.body-homepage {
-    background: var(--gradient-dark-teal);
-    background-color: #052832;
+    background-color: var(--color-primary);
   }
 </style>
