--- a/src/layouts/components/cards/PricingCard.astro
+++ b/src/layouts/components/cards/PricingCard.astro
@@ -57,7 +57,7 @@ const cardSurfaceStyle = featured
     <div
       class:list={[
         // Base
-        "pricing-card relative max-lg:box-shadow-primary hover:lg:box-shadow-primary mt-4 md:mt-6 flex flex-col gap-8 rounded-3xl border px-9 py-9 transition duration-500",
+        "pricing-card max-lg:box-shadow-primary hover:lg:box-shadow-primary relative mt-4 flex flex-col gap-8 rounded-3xl border px-9 py-9 transition duration-500 md:mt-6",
 
         // Make the featured (middle) card taller + more prominent on desktop
         // - move it up a bit
@@ -76,7 +76,7 @@ const cardSurfaceStyle = featured
       {badge?.enable && (
         <span
           class:list={[
-            "pricing-badge inline-block rounded-full px-4 py-1 text-xs font-semibold",
+            "pricing-badge inline-block rounded-full px-4 py-2 text-xs font-semibold",
             { "bg-primary/10 text-primary": featured },
             { "bg-white/10 text-white": !featured },
           ]}>
