fix accessibility issues

--- a/src/layouts/components/sections/MeetTheDuo.astro
+++ b/src/layouts/components/sections/MeetTheDuo.astro
@@ -70,7 +70,7 @@ let { title, description, items } = actualContent as meetTheDuoSectionType;
                 <SocialMediaLink
                   size="sm"
                   layout="classic"
-                  label="linkedin"
+                  label={`${item.name}'s Linkedin'`}
                   url={item.linkedin}
                   icon="/images/icons/svg/linkedin.svg"
                 />
