--- a/src/layouts/components/global/Head.astro
+++ b/src/layouts/components/global/Head.astro
@@ -8,6 +8,8 @@ import fontsJson from "@/config/fonts.json";
 import { Font } from "astro:assets";
 
 const fontVariables = fontsJson.map((font) => font.cssVariable) as any[];
+const themeColorLight = config.site?.themeColor?.light || "#ffffff";
+const themeColorDark = config.site?.themeColor?.dark || "#000000";
 ---
 
 <head>
@@ -24,12 +26,12 @@ const fontVariables = fontsJson.map((font) => font.cssVariable) as any[];
   <meta
     name="theme-color"
     media="(prefers-color-scheme: light)"
-    content="#fff"
+    content={themeColorLight}
   />
   <meta
     name="theme-color"
     media="(prefers-color-scheme: dark)"
-    content="#000"
+    content={themeColorDark}
   />
   <meta name="generator" content={Astro.generator} />
   <link
